--- a/style.qss
+++ b/style.qss
@@ -26,7 +26,7 @@ QPushButton {
 	border-style: none;
 }
 
-QPushButton#banchaButton, QPushButton#senchaButton {
+QPushButton#banchaButton, QPushButton#senchaButton, QPushButton#resetButton {
 	height: 140px;
 	font-size: 36pt;
 }
