--- a/style.qss
+++ b/style.qss
@@ -23,6 +23,11 @@ QLabel#infoLabel {
 	padding-bottom: 50px;
 }
 
+QLabel#leavesLabel {
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
+
 QPushButton {
 	background-color: #617610;
 	color: #F5FFCE;
